<resources>
    <string name="app_name">My Classic Car</string>
    <string-array name="engUnits">
        <item>CID</item>
        <item>Liter</item>
        <item>CC</item>
    </string-array>
    <string-array name="odo">
        <item>Miles</item>
        <item>KM</item>
    </string-array>
    <string-array name="engConfiguration">
        <item>1 Cyl</item>
        <item>L2</item>
        <item>L3</item>
        <item>L4</item>
        <item>L5</item>
        <item>L6</item>
        <item>L8</item>
        <item>Flat 4</item>
        <item>Flat 6</item>
        <item>V2</item>
        <item>V4</item>
        <item>V5</item>
        <item>V6</item>
        <item>V8</item>
        <item>V10</item>
        <item>V12</item>
        <item>V16</item>
    </string-array>
    <string-array name="years">
        <item>Year</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
        <item>1959</item>
        <item>1959</item>
        <item>1958</item>
        <item>1957</item>
        <item>1956</item>
        <item>1955</item>
        <item>1954</item>
        <item>1953</item>
        <item>1952</item>
        <item>1951</item>
        <item>1949</item>
        <item>1949</item>
        <item>1948</item>
        <item>1947</item>
        <item>1946</item>
        <item>1945</item>
        <item>1944</item>
        <item>1943</item>
        <item>1942</item>
        <item>1941</item>
        <item>1940</item>
        <item>1939</item>
        <item>1938</item>
        <item>1937</item>
        <item>1936</item>
        <item>1935</item>
        <item>1934</item>
        <item>1933</item>
        <item>1932</item>
        <item>1931</item>
        <item>1930</item>
        <item>1929</item>
        <item>1928</item>
        <item>1927</item>
        <item>1926</item>
        <item>1925</item>
        <item>1924</item>
        <item>1923</item>
        <item>1922</item>
        <item>1921</item>
        <item>1920</item>
        <item>1919</item>
        <item>1918</item>
        <item>1917</item>
        <item>1916</item>
        <item>1915</item>
        <item>1914</item>
        <item>1913</item>
        <item>1912</item>
        <item>1911</item>
        <item>1910</item>
        <item>1909</item>
        <item>1908</item>
        <item>1907</item>
        <item>1906</item>
        <item>1905</item>
        <item>1904</item>
        <item>1903</item>
        <item>1902</item>
        <item>1901</item>
        <item>1900</item>
        <item>1899</item>
        <item>1898</item>
        <item>1897</item>
        <item>1896</item>
        <item>1895</item>
        <item>1894</item>
        <item>1893</item>
        <item>1892</item>
        <item>1891</item>
        <item>1890</item>
        <item>1889</item>
        <item>1888</item>
        <item>1887</item>
        <item>1886</item>
        <item>1885</item>
    </string-array>
    <string name="engineOilChange">Engine Oil Change Record</string>
    <string name="maintenanceRecord">Maintenance Record</string>
    <string name="partNumbers">Part Numbers</string>
    <string name="wait">Wait!</string>
    <string name="didYouSave">An alteration has been made. Do you want to save the change? If you tap No your changes will be lost</string>
    <string name="didYouSaveNew">Do you want to save the your new entry? If you tap No your new entry will be discarded</string>
    <string name="useUpNav">Use the \"Up\" Arrow at the top left to navigate back.</string>
    <string name="car_info">Car Info.</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="add_car_name">Add Car</string>
    <string name="help_name">Help</string>
    <string name="car_settings_name">Settings</string>
    <string name="delete_this_car">Delete car</string>
    <string name="delete_part">Delete OEM Part</string>
    <string name="delete_source">Delete This Source</string>
    <string name="edit_oem_part">Edit OEM Part</string>
    <string name="edit_car">Edit Car</string>
    <string name="existing_part">Choose From Existing Part</string>
    <string name="home">Home</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="name">Name</string>
    <string name="source">Source</string>
    <string name="vin">V.I.N.</string>
    <string name="eng_number">Eng. Number</string>
    <string name="eng_size">Eng. Size</string>
    <string name="odo_read">Odometer Reading</string>
    <string name="odom_read">Odometer</string>
    <string name="odo_type">Odometer Type</string>
    <string name="oil_interval">Oil Change Interval</string>
    <string name="oil_was_due">Oil Change Was Due</string>
    <string name="next_oil">Next Oil Change Due</string>
    <string name="oil_viscosity">Oil Viscosity</string>
    <string name="oil_brand">Oil Brand</string>
    <string name="oil">Oil</string>
    <string name="filter">Filter</string>
    <string name="no_data">No data.</string>
    <string name="work_performed">Work Performed</string>
    <string name="specifics">Specifics</string>
    <string name="miles">Miles</string>
    <string name="click_on_wp">Tap on the maintenance instance to see details of the repair.</string>
    <string name="eng_config">Eng. Configuration</string>
    <string name="eng_config_short">Eng. Config.</string>
    <string name="app_image">app Image</string>
    <string name="save_button">Save</string>
    <string name="view_parts_button">View Parts</string>
    <string name="year_field">Year</string>
    <string name="unit_field">Units</string>
    <string name="notes">Notes:</string>
    <string name="add_part">Add Part</string>
    <string name="part_name">Part Name</string>
    <string name="part_number">Part Number</string>
    <string name="oem_part_number">OEM Part Number</string>
    <string name="mfg">Manufacture</string>
    <string name="barcode">UPC</string>
    <string name="other_sources">Other Sources of This Part</string>
    <string name="move_part">Move Part</string>
    <string name="details">Details:</string>
    <string name="edit_part">Edit Part</string>
    <string name="email">E-mail</string>
    <string name="date">Date</string>
    <string name="enable_edit">Enable Editing</string>
    <string name="to_edit">To edit selection, enable editing\nfrom the drop down menu.</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="not_reversible_part">Deleting this part is permanent and irreversible.</string>
    <string name="not_reversible_source">Deleting this part source is permanent and irreversible.</string>
    <string name="not_reversible_car">Deleting this car is permanent and irreversible.</string>
    <string name="tapSave">Tap the save button</string>
    <string name="tapSaveNoArrow">Tap the save button</string>
    <string name="date_format">EEE, ddMMMyyyy</string>
    <string name="textView">TextView</string>
    <string name="year_hint">Year</string>
    <string name="permissions_explanation">
        This app utilizes a light-weight embedded databasing system to store
        your car and part information. This section of the app is to give you a means of backing-up and
        restoring your information in.\n\n

        It\'s important to backup your data so as to prevent a lose
        of what will sure to be, over time, a large accumulation of parts and their additional sources.
        This lose of your information could be due to the lose or damage of your phone or tablet.\n\n

        Tap the E-mail button below to directly email us with your preference in cloud drive sites.\n\n

        Read the Help in the drop-down menu above for more information.
    </string>
</resources>