<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordSelectActivity">


    <include
        android:id="@+id/recSelToolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/BTengineOil"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/holo_red_dark"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/engineOilChange"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/BTmaintRec"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/BTpartNum"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/holo_red_dark"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/partNumbers"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/BTmaintRec" />

            <Button
                android:id="@+id/BTmaintRec"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@android:color/holo_red_dark"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/maintenanceRecord"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>